improved endmemebrs function

--- a/liaendmembers.Rcheck/liaendmembers/html/00Index.html
+++ b/liaendmembers.Rcheck/liaendmembers/html/00Index.html
@@ -12,7 +12,7 @@
 <div style="text-align: center;">
 <a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
 <a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;liaendmembers&rsquo; version 0.1.0</h2>
+</div><h2>Documentation for package &lsquo;liaendmembers&rsquo; version 0.2.0</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 </ul>
@@ -21,7 +21,11 @@
 
 
 <table width="100%">
+<tr><td style="width: 25%;"><a href="dor.html">dor</a></td>
+<td>LIA points from Tel Dor</td></tr>
 <tr><td style="width: 25%;"><a href="endmembers.html">endmembers</a></td>
 <td>Find Endmembers</td></tr>
+<tr><td style="width: 25%;"><a href="summary.liaendmembers.html">summary.liaendmembers</a></td>
+<td>Summary of LIA Endmember groups</td></tr>
 </table>
 </div></body></html>
